--- a/html/PBWBU/PBWBU020001_share.html
+++ b/html/PBWBU/PBWBU020001_share.html
@@ -68,7 +68,7 @@
 					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
 				</div>
 				<div class="center">
-					<h1>고객 명함 관리</h1>
+					<h1>고객 명함</h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
@@ -277,7 +277,7 @@
 					<!-- group -->
 					<div class="group py0 px4 mt24">
 						<strong class="title-large">등록/만료 정보</strong>
-						<button type="button" class="anchor chevron fs-16" data-micromodal-trigger="modal-bscard-change-history">변경 내역</button>
+						<button type="button" class="anchor chevron fs-16">변경 내역</button>
 					</div>
 					<!-- group -->
 
@@ -340,6 +340,8 @@
 						</div>
 					</div>
 					<!-- //info-detail-list -->
+
+					<p class="description error body-small my40 fc-typography-caption">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
 
 					<div class="btn-wrap">
 						<button type="button" class="btn-large btn-outlined">삭제</button>
