--- a/html/PBWCA/PBWCA000000.html
+++ b/html/PBWCA/PBWCA000000.html
@@ -94,7 +94,7 @@
 
 					<!-- snackbar-content -->
 					<div class="snackbar-content is-sticky">
-						<a href="#" class="fab fab-secondary fab-circle" aria-label="일정 검색"><i class="ico-search bg-icon-default"></i></a>
+						<a href="#" class="fab fab-secondary fab-circle" aria-label="일정 검색"><i class="ico-search bg-red-500"></i></a>
 						<a href="#" class="fab fab-primary fab-square" aria-label="일정 추가"><i class="ico-calendar"></i></a>
 					</div>
 					<!-- //snackbar-content -->
