--- a/html/PBWFU/PBWFU040000.html
+++ b/html/PBWFU/PBWFU040000.html
@@ -595,7 +595,7 @@
 					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
 				</div>
 				<div class="modal__content">
-					<div class="content content-fluid">
+					<div class="content">
 
 
 						<div class="table-col content-fluid overflow-visible px0 scroll-end">
@@ -644,6 +644,8 @@
 
 							</table>
 						</div>
+
+						<p class="description success body-small fc-typography-caption mt16">상세 수수료 정보는 투자설명서를 확인해주시기 바랍니다.</p>
 
 					</div>
 				</div>
