--- a/html/PBWIV/PBWIV010000_skeletone.html
+++ b/html/PBWIV/PBWIV010000_skeletone.html
@@ -87,11 +87,18 @@
 				<!-- content -->
 				<div class="content">
 
+
+					<style>
+						body {
+							background-color: var(--background-bg_lightGray);
+						}
+					</style>
+
 					<!-- tab-content -->
 					<div class="tab-content tab-fluid">
 						<ul class="tab-list tab-col overflow-list px24" role="tablist">
-							<li class="tab"><a role="tab" href="#">주요지수</a></li>
-							<li class="tab tab-active"><a role="tab" href="#">주가지수</a></li>
+							<li class="tab tab-active"><a role="tab" href="#">주요지수</a></li>
+							<li class="tab"><a role="tab" href="#">주가지수</a></li>
 							<li class="tab"><a role="tab" href="#">채권금리</a></li>
 							<li class="tab"><a role="tab" href="#">환율/원자재</a></li>
 							<li class="tab"><a role="tab" href="#">경제지표</a></li>
@@ -102,48 +109,79 @@
 					<!-- //tab-content -->
 
 					<div class="stock-index">
-						<div class="body-caption px4 ar mt16">2024-10-15 기준</div>
+						<div class="body-caption px4 ar mt16">2024-10-15 01:00 기준</div>
 
-						<div class="stock-index-list content-fluid px0 mt16">
+						<div class="stock-index-core mt8">
 							<ul>
 								<li>
 									<a href="#">
 										<dl>
-											<dt>KOSPI <i class="live-on" aria-label="실시간"></i></dt>
+											<dt></dt>
 											<dd>
-												<strong>9,999.99</strong>
-												<div class="stock rise" aria-label="등락폭(상승)">00.00</div>
-												<div class="tags tags-small tags-red-100" aria-label="등락율">+00.00</div>
+												<strong></strong>
 											</dd>
+											<dd></dd>
 										</dl>
 									</a>
 								</li>
 								<li>
 									<a href="#">
 										<dl>
-											<dt>KOSDAQ <i class="live-on" aria-label="실시간"></i></dt>
+											<dt></dt>
 											<dd>
-												<strong>9,999.99</strong>
-												<div class="stock fall" aria-label="등락폭(하락)">100.00</div>
-												<div class="tags tags-small tags-deepBlue" aria-label="등락율">-00.00</div>
+												<strong></strong>
 											</dd>
+											<dd></dd>
 										</dl>
 									</a>
 								</li>
 								<li>
 									<a href="#">
 										<dl>
-											<dt>KOSPI200 <i class="live-off" aria-label="비 실시간"></i></dt>
+											<dt></dt>
 											<dd>
-												<strong>9,999.99</strong>
-												<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
-												<div class="tags tags-small tags-lightGray" aria-label="등락율">00.00</div>
+												<strong></strong>
 											</dd>
+											<dd></dd>
 										</dl>
 									</a>
 								</li>
 							</ul>
 						</div>
+
+						<div class="stock-index-list mt16">
+							<ul>
+								<li>
+									<a href="#">
+										<dl>
+											<dt></dt>
+											<dd></dd>
+										</dl>
+										<div></div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<dl>
+											<dt></dt>
+											<dd></dd>
+										</dl>
+										<div></div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<dl>
+											<dt></dt>
+											<dd></dd>
+										</dl>
+										<div></div>
+									</a>
+								</li>
+							</ul>
+						</div>
+
+						<p class="description caution body-small fc-typography-caption mt16">장 시작(8:30~9:30)과 장마감(15:00~16:00)중에는 일부 투자금액이 맞지 않을 수 있습니다.</p>
 					</div>
 
 
@@ -162,6 +200,13 @@
 	</main>
 	<!-- //main -->
 
+
+	<script>
+		$('.content').addClass('loading')
+		setTimeout(function() {
+			$('.content').removeClass('loading')
+		}, 3000)
+	</script>
 </body>
 
 </html>
