--- a/html/PBWMA/PBWMA010000.html
+++ b/html/PBWMA/PBWMA010000.html
@@ -131,7 +131,7 @@
 
 					<div class="btn-wrap content-fluid py24 bg-background-bg_lightGray">
 						<div class="ac">
-							<button type="button" class="btn-medium btn-primary btn-round">펀드 VS 지수 수익률 비교해보기</button>
+							<button type="button" class="btn-medium btn-primary btn-round">펀드 VS 지수 비교해보기</button>
 						</div>
 					</div>
 
