--- a/html/index.html
+++ b/html/index.html
@@ -970,6 +970,22 @@
 					<tr>
 						<td></td>
 						<td></td>
+						<td>일정 검색</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCA040000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>검색 결과 없음</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCA040000_noresult</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
 						<td>일정 상세</td>
 						<td>개인 일정</td>
 						<td></td>
@@ -1009,7 +1025,10 @@
 						<td>종합주요지수</td>
 						<td></td>
 						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWIV010000</a></td>
+						<td class="al article">
+							<a href="" class="link inner-arrow">PBWIV010000</a>
+							<a href="" class="link inner-arrow">PBWIV010000_skeletone</a>
+						</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -1025,7 +1044,10 @@
 						<td></td>
 						<td>주가지수</td>
 						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWIV020000</a></td>
+						<td class="al article">
+							<a href="" class="link inner-arrow">PBWIV020000</a>
+							<a href="" class="link inner-arrow">PBWIV020000_skeletone</a>
+						</td>
 					</tr>
 					<tr>
 						<td></td>
