--- a/html/PBWFI/PBWFI040000.html
+++ b/html/PBWFI/PBWFI040000.html
@@ -118,25 +118,9 @@
 					</div>
 					<!-- //form -->
 
-
 					<!-- form -->
 					<div class="form mt16">
-						<div class="form-exchange bg-surface-surface50">
-							<div class="label">
-								<span class="flag flag-kr"><strong>KRW</strong><span>대한민국</span></span>
-							</div>
-							<div class="ex-input-wrap">
-								<input type="text" readonly value="1,427.30">
-								<span>1,427.30원</span>
-							</div>
-						</div>
-					</div>
-					<!-- //form -->
-
-
-					<!-- form -->
-					<div class="form mt16">
-						<div class="form-exchange bg-surface-surface50">
+						<div class="form-exchange">
 							<div class="label">환율우대율<i class="icon-only icon-24 icon-percent bg-icon-default"></i></div>
 							<div class="ex-input-wrap d-flex">
 								<button type="button" class="anchor chevron anchor-fluid" data-placeholder="없음" data-micromodal-trigger="modal-alert1"></button>
@@ -147,7 +131,7 @@
 
 					<!-- form -->
 					<div class="form mt16">
-						<div class="form-exchange bg-surface-surface50">
+						<div class="form-exchange">
 							<div class="label">환율우대율<i class="icon-only icon-24 icon-percent bg-icon-default"></i></div>
 							<div class="ex-input-wrap d-flex">
 								<button type="button" class="anchor chevron anchor-fluid" data-micromodal-trigger="modal-alert2">30%</button>
@@ -156,10 +140,24 @@
 					</div>
 					<!-- //form -->
 
+					<!-- btn-wrap -->
+					<div class="btn-wrap bg-transparent py0 my32">
+						<button type="button" class="btn-medium btn-primary btn-round" style="max-width:130px;">조회</button>
+					</div>
+					<!-- //btn-wrap -->
+
 					<!-- form -->
-					<div class="form mt40">
-						<div class="form-exchange">
-							<div class="sum"></div>
+					<div class="form mt16">
+						<div class="form-exchange" style="border-bottom-left-radius:0;border-bottom-right-radius:0;">
+							<div class="label">
+								<span class="flag flag-kr"><strong>KRW</strong><span>대한민국</span></span>
+							</div>
+							<div class="ex-input-wrap">
+								<input type="text" readonly value="1,427.30">
+								<span>1,427.30원</span>
+							</div>
+						</div>
+						<div class="form-exchange" style="border-top-left-radius:0;border-top-right-radius:0;">
 							<div class="label"><i class="icon-only icon-24 icon-calculator bg-icon-gray_1"></i>손익정보</div>
 							<div class="ex-input-wrap">
 								<input type="text" readonly value="12,345" class="fc-brandPrimary-blue600">
