--- a/html/PBWIV/PBWIV040000.html
+++ b/html/PBWIV/PBWIV040000.html
@@ -144,7 +144,11 @@
 									</a>
 								</li>
 							</ul>
-							<div class="stroke stroke4"></div>
+						</div>
+						<div class="stroke stroke4 content-fluid"></div>
+						<div class="body-caption px4 ar mt16">2024-10-15 01:00 기준</div>
+						<div class="stock-index-list content-fluid px0">
+
 							<h2 class="headline-small ac mt40">원자재</h2>
 							<ul class="mt16">
 								<li>
