--- a/html/PBWIV/PBWIV060000.html
+++ b/html/PBWIV/PBWIV060000.html
@@ -104,8 +104,8 @@
 					<div class="stock-index">
 						<div class="stock-index-list">
 							<h2 class="headline-small ac mt40">섹터지수</h2>
-							<div class="px24 mt24 mb40">
-								<div class="table-col content-fluid overflow-visible px0 mx-24">
+							<div class="px0 mt24 mb40 content-fluid">
+								<div class="table-col overflow-visible">
 									<table class="column01-sticky">
 										<caption>섹터지수</caption>
 										<thead>
@@ -197,7 +197,7 @@
 								</div>
 							</div>
 
-							<div class="stroke stroke4"></div>
+							<div class="stroke stroke4 content-fluid"></div>
 							<h2 class="headline-small ac mt40">지표별 수익률</h2>
 
 							<div class="chart-wrap mt32">
