--- a/html/PBWLO/PBWLO050000.html
+++ b/html/PBWLO/PBWLO050000.html
@@ -77,8 +77,8 @@
 						<div class="login login-bio">
 
 							<picture>
-								<source srcset="/resources/@temp/thumb_w.png">
-								<img src="/resources/@temp/thumb_w.png" alt="">
+								<source srcset="/resources/images/PBWLO/img_logout.svg">
+								<img src="/resources/images/PBWLO/img_logout.svg" alt="">
 							</picture>
 
 							<!-- tab-content -->
