--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -319,7 +319,7 @@
 											<source srcset="/resources/images/PBWMA/ico_fig_main_list01.svg">
 											<img src="/resources/images/PBWMA/ico_fig_main_list01.svg" alt="">
 										</picture>
-										<figcaption>수익률 Best</figcaption>
+										<figcaption>수익률 BEST</figcaption>
 									</figure>
 								</li>
 								<li>
@@ -328,7 +328,7 @@
 											<source srcset="/resources/images/PBWMA/ico_fig_main_list02.svg">
 											<img src="/resources/images/PBWMA/ico_fig_main_list02.svg" alt="">
 										</picture>
-										<figcaption>판매 Best</figcaption>
+										<figcaption>판매 BEST</figcaption>
 									</figure>
 								</li>
 								<li>
