--- a/html/PBWFU/PBWFU000000.html
+++ b/html/PBWFU/PBWFU000000.html
@@ -264,7 +264,7 @@
 							<!-- tab-content -->
 							<div class="tab-content">
 								<ul class="tab-list tab-col overflow-list px24" role="tablist">
-									<li class="tab tab-active"><a role="tab" href="#" class="fs-18">수익률 Best</a></li>
+									<li class="tab tab-active"><a role="tab" href="#" class="fs-18">수익률 BEST</a></li>
 									<li class="tab"><a role="tab" href="#" class="fs-18">키워드</a></li>
 									<li class="tab"><a role="tab" href="#" class="fs-18">섹터</a></li>
 									<li class="tab"><a role="tab" href="#" class="fs-18">국가</a></li>
