--- a/html/PBWMA/PBWMA010000.html
+++ b/html/PBWMA/PBWMA010000.html
@@ -143,7 +143,7 @@
 								<img src="/resources/images/PBWMA/image_fund01.png" alt="">
 							</picture>
 							<figcaption>
-								<span class="body-medium">수익률 Best 키워드의 펀드가 궁금하신가요?</span>
+								<span class="body-medium">수익률 BEST 키워드의 펀드가 궁금하신가요?</span>
 								<strong class="headline-small mt8">투자성향 분석 없이 <br> 원하는 펀드를 찾아 보세요!</strong>
 								<a href="#" class="btn-medium btn-secondary btn-round mt24">펀드 찾기<i class="ico-search"></i></a>
 							</figcaption>
