--- a/html/index.html
+++ b/html/index.html
@@ -739,7 +739,7 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>수익률 Best</td>
+						<td>수익률 BEST</td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWFU010000</a></td>
 					</tr>
@@ -747,7 +747,7 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>판매 Best</td>
+						<td>판매 BEST</td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWFU020000</a></td>
 					</tr>
