--- a/html/PBWCA/PBWCA000000.html
+++ b/html/PBWCA/PBWCA000000.html
@@ -240,9 +240,9 @@
 
 	<script>
 		$(function() {
-			const schedule01 = ["2024-12-15", "2024-12-16", "2024-12-17", "2024-12-19"]; // 개인 일정
-			const schedule02 = ["2024-12-15", "2024-12-16", "2024-12-18", "2024-12-20"]; // 고객 생일
-			const schedule03 = ["2024-12-15", "2024-12-17", "2024-12-18", "2024-12-21"]; // 수신 만기
+			const schedule01 = ["2024-12-15", "2024-12-16", "2024-12-17", "2024-12-19", "2025-01-16", "2025-01-17", "2025-01-18"]; // 개인 일정
+			const schedule02 = ["2024-12-15", "2024-12-16", "2024-12-18", "2024-12-20", "2025-01-16", "2025-01-17", "2025-01-18"]; // 고객 생일
+			const schedule03 = ["2024-12-15", "2024-12-17", "2024-12-18", "2024-12-21", "2025-01-16", "2025-01-17", "2025-01-18"]; // 수신 만기
 
 			$("#datepicker_schedule").datepicker({
 				dateFormat: 'yy-mm-dd',
