<div class="tab-content tab-fluid tab-sticky">

--- a/html/PBWCL/PBWCL070000_tab01.html
+++ b/html/PBWCL/PBWCL070000_tab01.html
@@ -105,7 +105,7 @@
 						</div>
 
 						<!-- tab-content -->
-						<div class="tab-content tab-fluid">
+						<div class="tab-content tab-fluid tab-sticky">
 							<ul class="tab-list tab-col overflow-list px24" role="tablist">
 								<li class="tab tab-active"><a role="tab" href="#">기업일반</a></li>
 								<li class="tab"><a role="tab" href="#">기업신용</a></li>
