--- a/html/PBWFI/PBWFI000000_tab01.html
+++ b/html/PBWFI/PBWFI000000_tab01.html
@@ -87,7 +87,7 @@
 				<div class="content">
 
 					<!-- tab-content -->
-					<div class="tab-content">
+					<div class="tab-content tab-fluid tab-sticky">
 						<ul class="tab-list tab-col overflow-list" role="tablist">
 							<li class="tab tab-active"><a role="tab" href="#">예금계산</a></li>
 							<li class="tab"><a role="tab" href="#">적금계산</a></li>
@@ -177,7 +177,7 @@
 					<div class="content">
 
 						<!-- tab-content -->
-						<div class="tab-content">
+						<div class="tab-content tab-sticky">
 							<ul class="tab-list tab-col overflow-list" role="tablist">
 								<li class="tab tab-active"><a role="tab" href="#">단리</a></li>
 								<li class="tab"><a role="tab" href="#">복리</a></li>
