--- a/html/PBWFI/PBWFI030000.html
+++ b/html/PBWFI/PBWFI030000.html
@@ -179,7 +179,7 @@
 					<div class="content">
 
 						<!-- tab-content -->
-						<div class="tab-content">
+						<div class="tab-content tab-sticky">
 							<ul class="tab-list tab-col overflow-list" role="tablist">
 								<li class="tab tab-active"><a role="tab" href="#">만기일시</a></li>
 								<li class="tab"><a role="tab" href="#">원리금균등</a></li>
