--- a/html/PBWFU/PBWFU050000.html
+++ b/html/PBWFU/PBWFU050000.html
@@ -97,7 +97,7 @@
 
 
 					<!-- tab-content -->
-					<div class="tab-content tab-fluid">
+					<div class="tab-content tab-fluid tab-sticky">
 						<ul class="tab-list tab-col overflow-list" role="tablist">
 							<li class="tab"><a role="tab" href="#">펀드</a></li>
 							<li class="tab tab-active"><a role="tab" href="#">커뮤니티<i class="badge">8,999</i></a></li>
