--- a/html/PBWFI/PBWFI040000.html
+++ b/html/PBWFI/PBWFI040000.html
@@ -93,7 +93,7 @@
 					</style>
 
 					<!-- tab-content -->
-					<div class="tab-content tab-fluid">
+					<div class="tab-content tab-fluid tab-sticky">
 						<ul class="tab-list tab-col overflow-list px24" role="tablist">
 							<li class="tab tab-active"><a role="tab" href="#" class="fs-18">외국통화매도</a></li>
 							<li class="tab"><a role="tab" href="#" class="fs-18">외국통화매입</a></li>
