--- a/html/PBWIV/PBWIV090000_nodata.html
+++ b/html/PBWIV/PBWIV090000_nodata.html
@@ -101,8 +101,8 @@
 					<!-- //snackbar-content -->
 
 					<!-- tab-content -->
-					<div class="tab-content tab-fluid">
-						<ul class="tab-list tab-col overflow-list px24" role="tablist">
+					<div class="tab-content tab-fluid tab-sticky">
+						<ul class="tab-list tab-col overflow-list" role="tablist">
 							<li class="tab tab-active"><a role="tab" href="#">전체</a></li>
 							<li class="tab"><a role="tab" href="#">경제</a></li>
 							<li class="tab"><a role="tab" href="#">세계</a></li>
