--- a/html/PBWCL/PBWCL000000.html
+++ b/html/PBWCL/PBWCL000000.html
@@ -186,7 +186,7 @@
 					<div class="content pb0">
 
 						<!-- tab-content -->
-						<div class="tab-content mb32">
+						<div class="tab-content tab-sticky mb32">
 							<ul class="tab-list tab-col overflow-list" role="tablist">
 								<li class="tab tab-active"><a role="tab" href="#">법인/사업자번호</a></li>
 								<li class="tab"><a role="tab" href="#">고객명</a></li>
