--- a/html/index.html
+++ b/html/index.html
@@ -95,6 +95,41 @@
 						<td class="al article"><a href="" class="link inner-arrow">loader</a></td>
 					</tr>
 				</tbody>
+
+				<tbody data-folder="common">
+					<tr>
+						<td>Common</td>
+						<td>서비스 장애</td>
+						<td>400에러(주소오류)</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">common_400</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>500에러(통신오류)</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">common_500</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>서비스 점검</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">common_notice</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>네트워크 에러</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">common_error</a></td>
+					</tr>
+				</tbody>
 				<tbody data-folder="components">
 					<tr>
 						<td>Components</td>
