--- a/html/PBWCA/PBWCA040000.html
+++ b/html/PBWCA/PBWCA040000.html
@@ -136,7 +136,7 @@
 						<a href="#" class="schedule-list">
 							<div class="schedule-title">
 								<i class="icon-only icon-24 icon-birth bg-purple-600" aria-label="생일"></i>
-								<strong class="title-medium">홍길동 생일</strong>
+								<strong class="title-medium">홍*동 생일</strong>
 							</div>
 							<div class="schedule-content">
 								<div class="schedule-detail">
@@ -153,7 +153,7 @@
 						<a href="#" class="schedule-list">
 							<div class="schedule-title">
 								<i class="icon-only icon-24 icon-wallet bg-cyan-500" aria-label="수신만기"></i>
-								<strong class="title-medium">홍길동 수신만기</strong>
+								<strong class="title-medium">홍*동 수신만기</strong>
 							</div>
 							<div class="schedule-content">
 								<div class="schedule-detail">
@@ -169,7 +169,7 @@
 						<a href="#" class="schedule-list">
 							<div class="schedule-title">
 								<i class="icon-only icon-24 icon-birth bg-purple-600" aria-label="생일"></i>
-								<strong class="title-medium">홍길동 생일</strong>
+								<strong class="title-medium">홍*동 생일</strong>
 							</div>
 							<div class="schedule-content">
 								<div class="schedule-detail">
@@ -236,7 +236,7 @@
 						<a href="#" class="schedule-list">
 							<div class="schedule-title">
 								<i class="icon-only icon-24 icon-birth bg-purple-600" aria-label="생일"></i>
-								<strong class="title-medium">홍길동 생일</strong>
+								<strong class="title-medium">홍*동 생일</strong>
 							</div>
 							<div class="schedule-content">
 								<div class="schedule-detail">
@@ -253,7 +253,7 @@
 						<a href="#" class="schedule-list">
 							<div class="schedule-title">
 								<i class="icon-only icon-24 icon-wallet bg-cyan-500" aria-label="수신만기"></i>
-								<strong class="title-medium">홍길동 수신만기</strong>
+								<strong class="title-medium">홍*동 수신만기</strong>
 							</div>
 							<div class="schedule-content">
 								<div class="schedule-detail">
@@ -269,7 +269,7 @@
 						<a href="#" class="schedule-list">
 							<div class="schedule-title">
 								<i class="icon-only icon-24 icon-birth bg-purple-600" aria-label="생일"></i>
-								<strong class="title-medium">홍길동 생일</strong>
+								<strong class="title-medium">홍*동 생일</strong>
 							</div>
 							<div class="schedule-content">
 								<div class="schedule-detail">
