--- a/html/PBWCH/PBWCH000000.html
+++ b/html/PBWCH/PBWCH000000.html
@@ -94,6 +94,27 @@
 					</div>
 					<!-- //snackbar-content -->
 
+
+					<!-- sticky-content -->
+					<div class="sticky-sentinal"></div>
+					<div class="sticky-content content-fluid">
+						<div class="sticky-content-inner">
+							<!-- form -->
+							<div class="form">
+								<div class="label"></div>
+								<div class="input-wrap input-btn">
+									<input type="text" placeholder="펀드/지수명으로 검색해 보세요." aria-label="검색">
+									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+									<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
+								</div>
+								<p class="validate-text"></p>
+							</div>
+							<!-- //form -->
+						</div>
+					</div>
+					<!-- //sticky-content -->
+
+
 					<div class="chart-diff pt40">
 						<strong class="title-small ac">펀드 vs 지수, 차트로 비교하세요!</strong>
 						<!-- tab-content -->
