--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -301,6 +301,34 @@
 										</dl>
 									</a>
 								</li>
+								<li>
+									<a href="#">
+										<dl>
+											<dt>S&P 500 <i class="live-on" aria-label="실시간"></i></dt>
+											<dd>
+												<strong>9,999.99</strong>
+												<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
+											</dd>
+											<dd>
+												<div class="tags tags-small tags-lightGray" aria-label="등락율">00.00</div>
+											</dd>
+										</dl>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<dl>
+											<dt>나스닥 <i class="live-on" aria-label="실시간"></i></dt>
+											<dd>
+												<strong>9,999.99</strong>
+												<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
+											</dd>
+											<dd>
+												<div class="tags tags-small tags-lightGray" aria-label="등락율">00.00</div>
+											</dd>
+										</dl>
+									</a>
+								</li>
 							</ul>
 							<div class="body-caption px4 ar mt8">2024-10-15 01:00 기준</div>
 						</div>
@@ -491,7 +519,7 @@
 				el: ".swiper-pagination",
 			}
 		});
-		// MicroModal.show('modal-notice');
+		MicroModal.show('modal-notice');
 	</script>
 </body>
 
