--- a/html/PBWBU/PBWBU010001.html
+++ b/html/PBWBU/PBWBU010001.html
@@ -136,7 +136,7 @@
 									<span>과장</span>
 								</span>
 								<span class="company-name">파인너츠</span>
-								<span class="tags tags-small tags-lightBlue">키맨</span>
+								<span class="tags tags-small tags-lightBlue"><i class="icon-only icon-15 icon-keyman"></i>키맨</span>
 							</button>
 							<figure>
 								<div class="due-date">
@@ -331,9 +331,9 @@
 
 						<!-- group -->
 						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">키맨</strong>
-								<div class="inp inp-toggle">
+							<div class="group-title pl8 pr16 py16 bg-surface-surface50 br8">
+								<strong class="title-medium gap6"><i class="icon-only icon-20 icon-keyman"></i>키맨</strong>
+								<div class="inp inp-toggle-large">
 									<label>
 										<input type="checkbox" aria-label="키맨">
 									</label>
