--- a/html/PBWBU/PBWBU020001_share.html
+++ b/html/PBWBU/PBWBU020001_share.html
@@ -111,7 +111,7 @@
 									<strong class="headline-small">나고객</strong>
 								</div>
 								<div class="tags-wrap">
-									<div class="tags tags-medium tags-lightBlue">키맨</div>
+									<div class="tags tags-medium tags-lightBlue"><i class="icon-only icon-18 icon-keyman"></i>키맨</div>
 									<div class="tags tags-medium tags-lightGray">VG공유</div>
 								</div>
 							</div>
