--- a/html/PBWME/PBWME030000.html
+++ b/html/PBWME/PBWME030000.html
@@ -89,8 +89,20 @@
 				<div class="content">
 
 
-					<p class="description caution body-small fc-typography-caption fw-400 mt40">이용 해지하실 경우, 자동으로 로그아웃 되며, 로그인 시 재동의를 하셔야만 서비스를 이용할 수 있습니다.</p>
-
+					<!-- division-center -->
+					<div class="division-center">
+						<!-- init-regist -->
+						<div class="init-regist">
+							<picture>
+								<source srcset="/resources/images/icon_only/icon_leave.svg">
+								<img src="/resources/images/icon_only/icon_leave.svg" alt="">
+							</picture>
+							<p class="description caution body-large ac fc-typography-title fw-700 mt32">서비스를 해지하시겠습니까?</p>
+							<p class="fc-typography-gray ac fs-16 mt16">이용 해지하실 경우, 자동으로 로그아웃 <br> 되며, 로그인 시 재 동의를 하셔야만 <br> 서비스를 이용할 수 있습니다.</p>
+						</div>
+						<!-- //init-regist -->
+					</div>
+					<!-- //division-center -->
 
 				</div>
 				<!-- //content -->
