--- a/html/PBWIN/PBWIN000000.html
+++ b/html/PBWIN/PBWIN000000.html
@@ -109,7 +109,7 @@
 
 					<!-- twochars-anchor -->
 					<div class="twochars-anchor mt24">
-						<div class="inp inp-toggle inp-toggle-inner-text">
+						<div class="inp inp-toggle-inner-text">
 							<picture>
 								<source srcset="/resources/images/PBWIN/text_twochairs.svg">
 								<img src="/resources/images/PBWIN/text_twochairs.svg" alt="TWO CHAIRS">
