--- a/html/PBWRE/PBWRE000000.html
+++ b/html/PBWRE/PBWRE000000.html
@@ -112,7 +112,7 @@
 						<ul>
 							<li>
 								<a href="#"><span class="title-medium px0">Daily 모닝브리핑</span></a>
-								<div class="inp inp-toggle inp-toggle-inner-text">
+								<div class="inp inp-toggle-inner-text">
 									<label>
 										<input type="checkbox" aria-label="구독" data-label-checked="구독" data-label="해지" checked>
 									</label>
@@ -120,7 +120,7 @@
 							</li>
 							<li>
 								<a href="#"><span class="title-medium px0">Weekly 투자전략</span></a>
-								<div class="inp inp-toggle inp-toggle-inner-text">
+								<div class="inp inp-toggle-inner-text">
 									<label>
 										<input type="checkbox" aria-label="구독" data-label-checked="구독" data-label="해지" checked>
 									</label>
