--- a/html/PBWAI/PBWAI000000.html
+++ b/html/PBWAI/PBWAI000000.html
@@ -131,7 +131,7 @@
 												<strong class="title-large mt2">환전주머니 환율 우대율이 변경 안내</strong>
 												<div class="comment-desc" data-toggle="toggle-wrap">
 													<div class="comment-desc-inner">
-														<p class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+														<p class="text" data-line="2">이곳에 내용이 들어갑니다</p>
 													</div>
 													<div class="comment-toggle-wrap">
 														<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
@@ -152,7 +152,7 @@
 												<strong class="title-large mt2">환전주머니 환율 우대율이 변경 안내</strong>
 												<div class="comment-desc" data-toggle="toggle-wrap">
 													<div class="comment-desc-inner">
-														<p class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+														<p class="text" data-line="2">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
 													</div>
 													<div class="comment-toggle-wrap">
 														<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
@@ -173,7 +173,7 @@
 												<strong class="title-large mt2">환전주머니 환율 우대율이 변경 안내</strong>
 												<div class="comment-desc" data-toggle="toggle-wrap">
 													<div class="comment-desc-inner">
-														<p class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+														<p class="text" data-line="2">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
 													</div>
 													<div class="comment-toggle-wrap">
 														<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
@@ -405,7 +405,7 @@
 		$('#btn-send-text').click(function() {
 			// $('.input-wrap input').focus()
 			var inputText = $('.input-wrap input').val();
-			$('.chatgroup .chatbody:last').after('<div class="chatbody"><div class="message-text right"><p class="text">' + inputText + '</p></div></div>')
+			$('.chatgroup .chatbody:last').after('<div class="chatbody"><div class="message-text right"><p class="text" data-line="2">' + inputText + '</p></div></div>')
 			scrollBottom();
 			$('.input-wrap input').val('')
 		})
@@ -418,6 +418,25 @@
 				scrollTop: $el.prop('scrollHeight')
 			}, scrollTime);
 		}
+	</script>
+
+
+	<script>
+		const toggleViewMore = document.querySelectorAll('[data-switch-before="chevron-down"]');
+		toggleViewMore.forEach(function(items) {
+			const toggleViewMoreWrap = items.closest('[data-toggle="toggle-wrap"]');
+			const text = toggleViewMoreWrap.querySelector('p');
+			const textLineHeight = parseInt(window.getComputedStyle(text).lineHeight);
+			const textOuterHeight = parseInt(window.getComputedStyle(text).height);
+			const textLineClamp = text.dataset.line;
+			const textMaxHeight = textLineHeight * textLineClamp;
+			if (textOuterHeight > textMaxHeight) {
+				text.classList.add('line-clamp')
+				console.log(text)
+			} else {
+				items.style.display = 'none'
+			}
+		})
 	</script>
 
 </body>
